# nxscli-np

./: CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
docs/: usage.rst
src/nxscli_np/: ext_commands.py  ext_plugins.py  plugin.py
src/nxscli_np/commands/: cmd_npmem.py  cmd_npsave.py
src/nxscli_np/plugins/: npmem.py  npsave.py
tests/: test_nxsclinp.py
tests/cli/: test_main.py
tests/plugins/: test_npsave.py
